--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,21 @@ jobs:
         echo usr="$OPENSKY_USR" >> ~/.Renviron
         echo pwd="$OPENSKY_PWD" >> ~/.Renviron     
       shell: bash
+
+    - name: Restore packages
+      shell: Rscript {0}
+      run: |
+        if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
+        renv::restore()
+
+    - name: Get data
+      run: Rscript -e 'source("save_historical_osn.R")'
+
+    - name: Commit results
+      run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
+        git add data/*
+        git commit -m 'Daily Open Sky Network LSGL flights data' || echo "No changes to commit"
+        git push origin || echo "No changes to commit"
+
