--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: main
 
-name: Get Lausanne airport (LSGL) flights data from Open Sky Network
+name: Get Lausanne airport flights data from Open Sky
 
 jobs:
   generate-data:
@@ -49,4 +49,4 @@ jobs:
         git add data/*
         git commit -m 'Daily Open Sky Network LSGL flights data' || echo "No changes to commit"
         git push origin || echo "No changes to commit"
-        
+  
