Run manually & disable cron

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-    - cron: '27 3,8 * * *'
+  workflow_dispatch
+#  schedule:
+#    - cron: '27 3,8 * * *'
   push:
     branches: main
 
