--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
         echo pwd="$OPENSKY_PWD" >> ~/.Renviron     
       shell: bash
 
+    - name: Install libssh-dev for R OpenSkies
+      run: |
+        sudo apt-get install -y libssh-dev
+      
     - name: Install R dependencies
       run: Rscript -e 'install.packages(c("dplyr","purrr", "stringr", "readr", "lubridate", "openSkies"))'
 
