--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,14 @@ jobs:
         echo pwd="$OPENSKY_PWD" >> ~/.Renviron     
       shell: bash
 
-    - name: Install libssh-dev for R OpenSkies & libcurl/libssl
+    - name: Install libssh-dev for R OpenSkies, libcurl/libssl & magick
       run: |
         sudo apt-get install -y libssh-dev
         sudo apt-get -y install libcurl4-openssl-dev
+        sudo add-apt-repository -y ppa:cran/imagemagick
+        sudo apt-get update
+        sudo apt-get install -y libmagick++-dev
+      
       
     - name: Restore packages
       shell: Rscript {0}
