--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,8 @@ jobs:
       run: |
         sudo apt-get install -y libssh-dev
         sudo apt-get -y install libcurl4-openssl-dev
-        sudo add-apt-repository -y ppa:cran/imagemagick
-        sudo apt-get update
-        sudo apt-get install -y libmagick++-dev
-      
-      
+        sudo apt-get -y install libmagick++-dev 
+            
     - name: Restore packages
       shell: Rscript {0}
       run: |
