--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,8 @@ jobs:
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
         git add data/*
-        git commit -m 'Daily Open Sky Network LSGL flights data' || echo "No changes to commit"
-        git push origin || echo "No changes to commit"
-  
+        git commit -am 'GH Actions Open Sky Network LSGL flights data $(date)' || echo "No changes to commit"
+        git push origin main || echo "No changes to commit"
+      env:
+        REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+        username: github-actions
