--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         git config --local user.name "GitHub Actions"
         git add data/*
         git commit -am 'GH Actions Open Sky Network LSGL flights data $(date)' || echo "No changes to commit"
-        git push origin main || echo "No changes to commit"
+        git push origin master || echo "No changes to commit"
       env:
         REPO_KEY: ${{secrets.GITHUB_TOKEN}}
         username: github-actions
