Fix for azure error
https://github.com/actions/runner-images/issues/675

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
 
     - name: Install libssh-dev for R OpenSkies, libcurl/libssl & magick
       run: |
+        sudo sed -i 's/azure\.//' /etc/apt/sources.list
+        sudo apt-get update
         sudo apt-get install -y libssh-dev
         sudo apt-get -y install libcurl4-openssl-dev
         sudo apt-get -y install libmagick++-dev 
