--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,14 @@ jobs:
         install-r: false
         # use RStudio's CRAN mirror with precompiled binaries
         use-public-rspm: true
+        
+    - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
 
+    - uses: r-lib/actions/check-r-package@v2
+    
     - name: Create and populate .Renviron file
       run: |
         echo usr="$OPENSKY_USR" >> ~/.Renviron
