--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         install-r: false
         # use RStudio's CRAN mirror with precompiled binaries
         use-public-rspm: true
+        r-version: ${{ matrix.config.r }}
+        http-user-agent: ${{ matrix.config.http-user-agent }}
         
     - uses: r-lib/actions/setup-r-dependencies@v2
       with:
