--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: r-lib/actions/setup-r@v2
       with:
         # don't reinstall R
-        install-r: true
+        install-r: false
         # use RStudio's CRAN mirror with precompiled binaries
         use-public-rspm: true
         r-version: ${{ matrix.config.r }}
